Fix blog post display for large phones
content upgrade was not displayed properly and the fotter was too big

--- a/source/stylesheets/_footer.sass
+++ b/source/stylesheets/_footer.sass
@@ -13,6 +13,5 @@
       @include span-columns(4 of 12)
       @include media($mobile)
         @include span-columns(4)
-        margin-left: 2em
         margin-bottom: 2em
 
